# ObmanCPP

./: CMakeLists.txt  README.md  Utils.cmake
cmake/: FindPHPCPP.cmake
interception/: CMakeLists.txt  utils.cpp  utils.h
interception/implementation/: config.cpp  config.h  definition.cpp  definition.h
interception/interfaces/: cache_interface.h  config.h  config_interface.h  definition_interface.h
interception/php_extension/: php.cpp
object_manager/: CMakeLists.txt  interfaces.h  php.cpp  php.h  structures.h  utils.cpp  utils.h
object_manager/implementation/: config.cpp  config.h  definition.cpp  definition.h  factory.cpp  factory.h  object_manager.cpp  object_manager.h  relations.cpp  relations.h
object_manager/interfaces/: config_interface.h  definition_interface.h  factory_interface.h  object_manager_interface.h  relations_interface.h
object_manager/php_extension/: config.cpp  config.h  definition.cpp  definition.h  factory.cpp  factory.h  object_manager.cpp  object_manager.h  php.cpp  relations.cpp  relations.h
object_manager/structures/: accessor.h  argument.h  instance.h  kind_table.hpp  parameter.h
object_manager/structures/datastructures/: bidirectional_map.hpp
object_manager/transformers/: argument_transformer.cpp  argument_transformer.h
object_manager/wrappers/: relations.cpp  relations.h
